<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="MailDeteiledActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:hint="@string/title_hint"
            android:textSize="@dimen/title_text_size"
            android:lines="1"/>


        <EditText
            android:id="@+id/subtitle_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:hint="@string/subtitle_hint"

            android:textColor="@color/colorBlack"
            android:textSize="@dimen/secondary_text_size" />

        <EditText
            android:id="@+id/content_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:hint="@string/content_hint"
            android:textSize="@dimen/secondary_text_size"/>

        <Button
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/button1_text" />

    </LinearLayout>


</RelativeLayout>