<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MailDeteiledActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/avatar_img"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_margin="@dimen/default_margin" />

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:layout_toRightOf="@+id/avatar_img"
                android:text="@string/title_hint"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/fish_hours"
                android:textSize="@dimen/title_text_size"/>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/starStyle"
                android:layout_below="@+id/time_text_view"
                android:layout_alignParentRight="true"
                android:layout_marginHorizontal="@dimen/default_margin"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/subtitle_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:text="@string/subtitle_hint"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/secondary_text_size" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/content_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/fish_text" />
        </ScrollView>
    </LinearLayout>

</RelativeLayout>