<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxHeight="@dimen/max_email_item_height">

    <LinearLayout
        android:id="@+id/Linear_layout_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/avatar_img"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_margin="@dimen/default_margin"
            android:contentDescription="@string/todo" />

        <RelativeLayout
            android:id="@+id/relative_layout_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/email_item_margin_between_text_views"
                android:layout_toStartOf="@+id/time_text_view"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="@dimen/default_margin"
                android:textColor="@android:color/black"
                android:textSize="@dimen/title_text_size"
                tools:text="@string/fish_text" />

            <TextView
                android:id="@+id/subtitle_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_text_view"
                android:layout_marginBottom="@dimen/email_item_margin_between_text_views"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingEnd="@dimen/default_margin"
                android:textColor="@android:color/black"
                android:textSize="@dimen/secondary_text_size"
                tools:text="@string/fish_text" />

            <TextView
                android:id="@+id/time_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="@dimen/default_margin"
                android:textSize="@dimen/title_text_size"
                tools:text="@string/fish_hours" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/content_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Linear_layout_1"
        android:ellipsize="end"
        android:maxLines="2"
        android:paddingStart="@dimen/default_margin"
        android:paddingEnd="@dimen/default_margin"
        android:paddingBottom="@dimen/default_margin"
        android:textSize="@dimen/secondary_text_size"
        tools:text="@string/fish_text"
        android:layout_toStartOf="@+id/checkBox"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/starStyle"
        android:layout_below="@+id/Linear_layout_1"
        android:layout_alignParentEnd="true" />


</RelativeLayout>